# ProjectBrain

./: .gitignore  ARCHITECTURE.md  PROJECT_BOOTSTRAP.md  PROJECT_STATE.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
docs/: PROJECT_RULES.md
docs/adr/: ADR-001-project-structure.md  ADR-002-project-layout.md  ADR-003-knowledge-graph-as-core-domain.md  ADR-004-python-parser-strategy.md  README.md
src/projectbrain/: __init__.py
src/projectbrain/cli/: __init__.py  main.py
src/projectbrain/core/: config.py  constants.py  logging.py
src/projectbrain/graph/: __init__.py  builder.py  exceptions.py  knowledge_graph.py  models.py
src/projectbrain/parsers/: __init__.py  exceptions.py  models.py  protocols.py  python_parser.py
src/projectbrain/scanner/: __init__.py  discovery.py  exceptions.py  filters.py  models.py  scanner.py
src/projectbrain/services/: project_initializer.py
tests/: test_config.py  test_graph.py  test_project_initializer.py  test_python_parser.py  test_scanner.py  test_scanner_discovery.py  test_scanner_filters.py
